<resources>
    <string name="app_name">Tela Acesso</string>
    <string name="welcome_to">Welcome to</string>
    <string name="the_apps">the apps</string>
    <string name="log_in">Log In</string>
    <string name="doesn_t_have_a_username">Doesn\'t have a username?</string>
    <string name="singn_up"><u>Singn up.</u></string>
    <string name="name">Name</string>
    <string name="usuario">Usuario</string>
    <string name="senha">Senha</string>

</resources>